tests/snapshots/output/sources__delete.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources delete 50000002-0000-4000-8000-000000000002 --yes
exit: 0
--- stdout ---
Done: Source 50000002... deleted.
