tests/snapshots/output/sources__delete_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources delete 50000002-0000-4000-8000-000000000002 --yes --json
exit: 0
--- stdout ---
{
  "data": {
    "deleted": true,
    "id": "50000002-0000-4000-8000-000000000002",
    "runtime": {
      "nodesFound": 1,
      "nodesUpdated": 1,
      "warnings": []
    }
  }
}
