tests/snapshots/output/sources__get_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources get 50000001-0000-4000-8000-000000000001 --json
exit: 0
--- stdout ---
{
  "data": {
    "id": "50000001-0000-4000-8000-000000000001",
    "accountId": "acct-alpha",
    "appId": "a0000001-0000-4000-8000-000000000001",
    "appName": "Demo Shop",
    "syncType": "shopify",
    "importTasks": [
      "orders",
      "customers"
    ],
    "syncFrequency": "every 6 hours",
    "syncAnchorTime": "02:00",
    "syncAnchorTimezone": "UTC",
    "rollingPeriodDays": null,
    "state": "active",
    "integrationStatus": "active",
    "lastSyncAt": "[now-2h30m]",
    "lastError": null,
    "consecutiveFailures": 0,
    "createdAt": "2026-01-02T08:00:00.000Z",
    "updatedAt": "2026-01-05T09:07:03.000Z",
    "appType": "shopify",
    "appState": "active",
    "warehouseType": "bigquery",
    "warehouseConfig": null,
    "datasetId": "demo_shop_raw",
    "isOnboarding": false,
    "config": {
      "shop_domain": "demo-shop.example.com"
    },
    "latestJobId": "b0000001-0000-4000-8000-000000000001",
    "activeImportJobId": "b0000001-0000-4000-8000-000000000001",
    "earliestDataAt": null,
    "latestDataAt": null,
    "importProgress": {
      "latestCheckpointAt": "2026-01-05T09:00:00.000Z",
      "enabledStreamCount": 2,
      "checkpointStreamCount": 2,
      "attentionStreamCount": 0
    }
  }
}
