tests/snapshots/output/sources__pause.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources pause 50000002-0000-4000-8000-000000000002
exit: 0
--- stdout ---
Done: Source 50000002... paused.
