tests/snapshots/output/sources__pause_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo sources pause 50000002-0000-4000-8000-000000000002 --json
exit: 0
--- stdout ---
{
  "data": {
    "id": "50000002-0000-4000-8000-000000000002",
    "state": "inactive",
    "integrationStatus": "paused",
    "runtime": {
      "nodesFound": 1,
      "nodesUpdated": 1,
      "warnings": []
    },
    "message": "Source paused successfully"
  }
}
